log
Fri 05 May 2023 06:39:52 PM UTC: 
 tests:  0|5
total_score: 0/70
937a048
Fri 05 May 2023 06:49:17 PM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ecd18d0
Fri 05 May 2023 06:55:06 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f126ff4
Fri 05 May 2023 06:55:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3c5805f
Fri 05 May 2023 07:23:50 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:67:15: error: called object is not a function or function pointer
   67 |       int k = 3(i/3) + j/3;
      |               ^
sudoku.c:68:15: error: called object is not a function or function pointer
   68 |       int p = 3(i%3) + j%3;
      |               ^
Compilation failed
a21f591
